# marketing-brain

./: .env.example  .gitignore  README.md  REWRITE.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.sh
app/: config.py  main.py  schemas.py
app/ai/: brain.py  engine.py
app/core/: database.py
app/routes/: _shared.py  auth.py  autopilot.py  brain.py  brands.py  competitors.py  growth.py  misc.py  pipeline.py  publishing.py  studio.py
app/services/: projects.py  workspace.py
apps/api/: .dockerignore  Dockerfile  alembic.ini  pytest.ini  requirements.txt
apps/web/: .dockerignore  Dockerfile  tailwind.config.ts
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE.md  CONTENT_CALENDAR_ENGINE.md  CURRENT_STATE.md  ENGINEERING_ROADMAP.md  GUIDE.md  PRODUCT_VISION.md  REPORT.md  UI_UX_BLUEPRINT.md  VERIFICATION.md
landing/: index.html
legacy/: AGENTS.md  MARKETING_DOG_BLUEPRINT.md  MARKETING_DOG_UPGRADE.md  README-monorepo.md
legacy/docs-monorepo/: CURRENT_STATE.md  DATABASE_SCHEMA.md  DEPLOY.md  SYSTEM_DESIGN.md
legacy/marketing-brain-v2/: .gitignore  CHANGES_OPENROUTER.md  README.md  requirements.txt
legacy/supabase/: schema.sql
legacy/video/: Root.tsx
marketing-brain-v2/: .env.example  CHANGES_OPENROUTER.md  render.yaml  requirements.txt  run.sh
marketing-brain-v2/backend/: ai_engine.py  auth.py  database.py  main.py  scraper.py  trend_scanner.py
marketing-brain-v2/docs/: COMPETITOR-NOTES.md
marketing-brain-v2/frontend/: index.html
tests/: test_smoke.py
video/: BrandReel.tsx
web/: index.html
web/css/: styles.css
(+224 files in other folders)
